overflow SMhomepage fixed 1

--- a/fullstack-template/frontend/src/app/pages/Mobile/header-tag/header-tag.component.scss
+++ b/fullstack-template/frontend/src/app/pages/Mobile/header-tag/header-tag.component.scss
@@ -4,6 +4,8 @@ span{
 }
 
 .menu{
+    
+    overflow: hidden;
     background-color: rgb(37, 37, 37);
 }
 
